# pagefold

./: .gitignore  README.md  pyproject.toml
.claude/: antientropy-config.json
src/pagefold/: __init__.py  scraper.py
tests/: run_tests.py  test_urls.txt
tests/baseline/archive.is_2bM7u/: military-briefing-how-iran-keeps-firing-missiles-under-bombardment.md
tests/baseline/chamath.substack.com_p_what-i-read-this-week-178/: 18b-in-pharma-deals-and-ai-40-trade-growth.md
tests/baseline/gepa-ai.github.io_gepa_guides_faq_/: faq.md
tests/baseline/hannahritchie.substack.com_p_uk-aid-budget-cuts/: the-uk-is-cutting-its-aid-budget-to-the-lowest-level-in-decades.md
tests/baseline/pipelinereview.substack.com_p_eli-lilly-to-acquire-centessa/: eli-lilly-to-acquire-centessa.md
tests/baseline/www.arc.computer_blog_production-aware-RL/: production-aware-rl-how-agents-learn-from-failures.md
